--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.21",
+    "canvas-confetti": "^1.9.3",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
